updating bootstrap calc issues, fixing font size issues on buttons, list items, alignments for images

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -433,10 +433,6 @@ html :where(.editor-styles-wrapper) kbd {
 	background-color: transparent;
 }
 
-.wp-block-code>code {
-	border: none;
-}
-
 /* social link block */
 .editor-styles-wrapper .wp-block-social-links li:last-child {
 	margin-right: 0px;
